style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', system-ui;
    color: #243e63;
}

html {
    scroll-behavior: smooth;
}

body {
    max-width: 100vw;
    overflow-x: hidden;
}

.row {
    width: 100%;
    max-width: 1280px;
    margin: 0 auto;
}

.row__narrow {
    width: 100%;
    max-width: 1024px;
    margin: 0 auto;
}

.container {
    padding: 96px 0;
}

.purple {
    color: #6415ff;
}

section {
    padding: 0 32px;
}



main {
    margin-bottom: 96px;
}

img {
    width: 100%;
    overflow-clip-margin: content-box;
    overflow: clip;
}


/* 

NAVBAR ↓

*/


nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 32px;
    background: #fff;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
    padding: 1.5rem 2rem;
    position: sticky;
    top: 0;
    z-index: 1000;

}

.nav__row {
    display: flex;
    justify-content: space-between;
    /* 
    align-items: center;
    max-width: 1280px;
    margin: 0 auto;
    */
}

.nav__logo {
    display: flex;
    align-items: center;
    margin: 8px 0;
    padding-bottom: 4px;
}

.nav__logo--img {
    width: 40px;
    height: 40px;
}

.nav__logo--title {
    font-size: 24px;
    font-weight: 900;
    margin-left: 12px;
    letter-spacing: 0.6px;
    padding-bottom: 2px;
    color: #243e63;
}

.nav__links {
    display: flex;
    align-items: center;
    padding-bottom: 2px;

}


.nav__links a:hover {
    border-color: #6415ff;
}

.nav__link {
    margin: 0 24px;
    font-size: 14px;
    font-weight: 600;
    padding-top: 4px;
    letter-spacing: 0.36px;
    position: relative;
    transition: all 300ms;
}



.nav__link:hover {
    color: #6415ff;
}

.nav__link:after {
    content: "";
    position: absolute;
    left: 0px;
    bottom: -6px;
    height: 2px;
    width: 100%;
    background: #6415ff;
    transition: all 300ms;
    opacity: 0;
}

.nav__link:hover:after {
    opacity: 1;
}

.login {
    margin-left: 48px;
}

.nav__link--login {
    margin-left: 48px;
}

.nav__link:hover,
.nav__link.login:hover {
    display: inline-block;
    position: relative;
    content: "";
    left: 0px;
    color: #6415ff;
    opacity: 1;
    margin-bottom: 4px;
    transition: opacity 300ms;

}

.nav__link--primary {
    margin: 0;
    padding: 10px 32px;
    margin-top: 2px;
    border-radius: 9999px;
    background: #6415ff;
    color: #fff;
    line-height: 1.5;
    border: none;
    width: auto;
    transition: all 300ms ease;
    font-weight: 700;


}

.nav__link--primary:after {
    content: "";
    width: 0;
    height: 0;
}

a {
    display: inline;
    text-decoration: none;

}

.nav__link--primary:hover {
    background-color: rgba(80, 17, 204);
}



/* buttons */

button {
    cursor: pointer;
    border: none;

}

.btn {
    margin: 8px;
    height: calc(100% -16PX);
    border-radius: 9999PX;
    width: 160px;
    background-color: #6415ff;
    padding: 12px 32px;
    border: none;
    border-radius: 500PX;
    color: #fff;
    font-weight: bold;
    font-size: 16px;
    transition: all 300ms;
    z-index: 2;
}

.btn__quality {
    background-color: #6415ff;
    padding: 12px 32px;
    border: none;
    border-radius: 9999px;
    /* makes button pill shapped */
    font-size: 14px;
    color: #fff;
    font-weight: bold;
    transition: all 300ms;
    cursor: pointer;

}

.btn__quality:hover {
    background-color: #5011cc;
}

.btn:hover {
    background-color: rgba(80, 17, 204);
}


.btn__menu {
    display: none;
    background: transparent;
    border: none;
    transition: all 300ms ease;
}


.btn__menu--svg:hover {
    filter: invert(26%) sepia(94%) saturate(7476%) hue-rotate(261deg) brightness(94%) contrast(115%);
}

.header__email--btn:hover {
    background-color: rgba(60, 13, 153);
    color: #ffffff4d;
    align-items: center;
    transition: all 300ms ease;
    opacity: 1;
    */
}

.btn__menu--close {
    position: fixed;
    top: 24px;
    right: 18px;
}

/* modal */

.modal {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 378px;
    margin: 24px 16px;
    padding: 32px;
    background-color: #fff;
    border: 1px solid rgb(229, 231, 235);
    border-radius: 8px;
    z-index: 4;
    visibility: hidden;
    opacity: 0;
    transform: translateX(300%);
    transition: all 300ms ease;
}

.modal__links {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.modal__link {
    color: #1a202c;
    font-size: 18px;
    font-weight: 600;
    line-height: 1.5;
    margin: 8px 0;
    padding-bottom: 4px;
    border-bottom: 2px solid transparent;
}

.modal__link--primary {
    color: #f7fafc;
    padding: 12px 32px;
    background: #6415ff;
    border-radius: 500px;
    border: none;
}

.menu--open .modal {
    visibility: visible;
    opacity: 1;
    transform: translateX(0);
}




/* 

HEADER / ABOUT US ↓

*/

header {
    position: relative;
}

.header__form {
    display: flex;
    align-items: center;
    gap: 12px;
}

.header__blob {
    position: absolute;
    left: 0;
    bottom: 0;
    opacity: 0.05;
    width: 256px;
    height: 256px;
    transform: matrix(1, 0, 0, 1, -163, 0);
}


header .row {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 41.6667%;
}

.header__description {
    width: 40%;
    display: flex;
    flex-direction: column;
}

.header__description--para {
    margin: 32px 0;
    font-size: 18px;
    line-height: 1.625;
    color: #7c8ba1;
    font-weight: 500;

}

.header__email {
    width: 100%;
    max-width: 448px;
    height: 68px;
    margin-bottom: 32px;
    position: relative;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}
/* ... */

